examples/LINUX/tests/errors/function-missing-return.biplan


// Function syntax check, this program is missing a return.
// Compiler should return "non matching return" error


sum(1, 1)
stop

function sum($a, $b)
